--- a/www/components/popup-window/popup-labels/popup-labels.css
+++ b/www/components/popup-window/popup-labels/popup-labels.css
@@ -21,20 +21,22 @@
       padding: 0; }
       :host .box section.content ul li .title {
         width: 100%; }
-      :host .box section.content ul li input[name=chk-label] {
+        :host .box section.content ul li .title input[type=text] {
+          border: none;
+          background-color: transparent; }
+      :host .box section.content ul li .chkwrap {
         display: inline-block;
-        line-height: 45px;
         width: 45px;
-        margin: 0 15px 0 9px;
-        vertical-align: center;
-        transition: all 300ms;
-        opacity: 1; }
+        min-width: 45px;
+        height: 45px;
+        line-height: 50px;
+        text-align: center; }
       :host .box section.content ul li button[name=remove] {
         line-height: 45px;
-        width: 45px; }
-      :host .box section.content ul li button[name=move] {
-        position: absolute;
-        line-height: 45px;
-        width: 45px; }
-  :host .box[editing=true] section.content ul li input[name=chk-label] {
-    opacity: 0; }
+        width: 45px;
+        opacity: 0;
+        transform: scale(0);
+        transition: all 300ms; }
+    :host .box section.content ul li[editing=true] button[name=remove] {
+      opacity: 1;
+      transform: scale(1); }
