--- a/www/components/recipenote.html
+++ b/www/components/recipenote.html
@@ -5,7 +5,7 @@
             <button nav name="menu" title="M" (click)="showSidebar();"></button>
             <title nav><!-- here main title--></title>
             <btn-group>
-                <button nav name="sync" title="Y" (click)="openWindow('labels');"></button>
+                <button nav name="sync" title="Y" (click)="openWindow('label');"></button>
                 <button nav name="search" title="S"></button>
                 <button nav name="cart" title="C"></button>
             </btn-group>
