--- a/www/components/view/view.html
+++ b/www/components/view/view.html
@@ -28,7 +28,7 @@
         <button name="color-sticker" title="color sticker"></button>
         <button name="edit" title="edit"></button>
         <button name="hold-screen" title="hold-screen"></button>
-        <button name="label" title="label"></button>
+        <button name="label" title="label" (click)="openLabelWindow();"></button>
         <button name="publish" title="publish"></button>
         <button name="share" title="share"></button>
         <button name="download" title="download"></button>
