--- a/app/components/recipenote.html
+++ b/app/components/recipenote.html
@@ -2,12 +2,10 @@
 <container [attr.active]="sidebarActive">
     <nav>
         <panel id="main-header">
-            <button nav name="menu" title="M" (click)="showSidebar();"></button>
             <title nav><!-- here main title--></title>
             <btn-group>
                 <button nav name="sync" title="Y" (click)="openWindow('label');"></button>
-                <button nav name="search" title="S"></button>
-                <button nav name="cart" title="C"></button>
+                <button nav name="account" title="A"></button>
             </btn-group>
         </panel>
     </nav>
