--- a/app/components/recipenote.sass
+++ b/app/components/recipenote.sass
@@ -6,8 +6,7 @@ sidebar
     flex: 0 0 auto
     bottom: 0
     box-sizing: border-box
-    width: 65%
-    min-width: $min_sidebar_width
+    width: $sidebar_width
     height: 100%
     background-color: #323943
 
@@ -117,4 +116,4 @@ content
         .sidebar-close-area[active=true]
             display: block
     container[active=true]
-        transform: translate3d(60%, 0, 0) scale3d(0.85, 0.85, 1)
+        transform: translateX($sidebar_width)
