--- a/app/components/button/button.sass
+++ b/app/components/button/button.sass
@@ -7,8 +7,8 @@
     box-sizing: border-box
     width: inherit
     min-width: $nav_button_width
-    // background: transparent
-    background: #43B6B9
+    background: transparent
+    // background: #43B6B9
     text-align: center
     font: inherit
     outline-width: 0
