--- a/app/components/recipenote.html
+++ b/app/components/recipenote.html
@@ -1,26 +1,37 @@
-<sidebar [attr.active]="sidebarActive" (sidebarClose)="hideSidebar();"></sidebar>
-<container [attr.active]="sidebarActive">
+<container>
     <nav>
         <panel id="main-header">
-            <title nav><!-- here main title--></title>
-            <btn-group>
-                <button nav name="sync" title="Y" (click)="openWindow('label');"></button>
-                <button nav name="account" title="A"></button>
-            </btn-group>
+            <button nav name="setting" title="S"></button>
+            <div id="main-titlebox" (click)="toggleLabelList()">
+                <div id="main-title">All labels</div>
+                <div class="down-arrow">∨</div>
+            </div>
+            <button nav name="sync" title="Y" (click)="openWindow('label');"></button>
         </panel>
     </nav>
     <content>
         <panel id="main">
             <list>
-                <div id="list-inner">
+                <div id="list-inner" [attr.active]="_labelListActivation">
                     <item
                     *ngFor="#recipe of (recipes | JSON2Array)"
                     [recipeData]="recipe"
                     (click)="view.open(recipe.id);">
                     </item>
                 </div>
+                <div id="label-list" [attr.active]="_labelListActivation">
+                    <ul>
+                        <li class="label" *ngFor="#labelData of (_labelService.labels.toArray() | exceptRemoved)">{{labelData.name}}</li>
+                    </ul>
+                </div>
                 <div id="recipe-add-icon">
                     <button name="add-item" title="+" (click)="addRecipe();"></button>
+                </div>
+                <div id="list-bottom">
+                    <button nav name="market" title="M" (click)="openWindow('label');"></button>
+                    <button nav name="wastebasket" title="W" (click)="openWindow('label');"></button>
+                    <button nav name="cart" title="C" (click)="openWindow('label');"></button>
+                    <button nav name="search" title="S" (click)="openWindow('label');"></button>
                 </div>
             </list>
             <view></view>
@@ -28,7 +39,8 @@
         <panel id="cart">
 
         </panel>
+        
     </content>
-    <div class="sidebar-close-area" [attr.active]="[sidebarActive]" (click)="hideSidebar();"></div>
+    
 </container>
 <input type="hidden" #popupWindowHead />
