--- a/app/components/common.sass
+++ b/app/components/common.sass
@@ -1,8 +1,7 @@
 // Definitions
 $vendors: -webkit- -moz- -ms- -o-
-$sidebar_width: 250px
-$min_sidebar_width: 250px
 $navbar_height: 45px
+$bottom_height: 45px
 $popup_nav_height: 45px
 $min_container_width: 320px
 $max_container_width: $min_container_width * 2
@@ -32,8 +31,8 @@ $nav_button_width: 45px
 $width_level1: $min_container_width + 150
 $width_level2: $max_container_width
 $width_level3: $max_container_width + 100
-$width_level4: $max_container_width + $min_sidebar_width
-$width_level5: $max_container_width + $min_sidebar_width + 250
+$width_level4: $max_container_width 
+$width_level5: $max_container_width + 250
 
 // animation
 $transition_default: all 0.4s
