--- a/app/components/recipenote.sass
+++ b/app/components/recipenote.sass
@@ -1,39 +1,22 @@
 @import 'common'
 
-sidebar
-    position: fixed
-    z-index: 20
-    flex: 0 0 auto
-    bottom: 0
-    box-sizing: border-box
-    width: $sidebar_width
-    height: 100%
-    background-color: #323943
-
 container
     position: relative
     z-index: 30
     display: flex
     flex-direction: column
-    flex: 1 1 auto
+    flex: 0 1 auto
     width: 100%
     min-width: $min_container_width
     height: 100%
-    background-color: #777
+    background-color: #fff
     box-sizing: border-box
     transition: all 400ms cubic-bezier(0.175, 0.885, 0.335, 1.05)
-    .sidebar-close-area
-        display: none
-        position: absolute
-        top: 0
-        left: 0
-        width: 100%
-        height: 100%
-        opacity: .7
-        background-color: #9BF0E9
     nav
         position: relative
-        background-color: #777
+        box-sizing: border-box
+        display: flex
+        flex-direction: column
         flex: 0 0 auto
         width: 100%
         height: $navbar_height
@@ -41,6 +24,42 @@ container
             line-height: $navbar_height
             button
                 width: $nav_button_width
+        #main-header
+            flex: 0 0 auto
+            #main-titlebox
+                width: 100%
+                text-align: center
+                cursor: pointer
+                #main-title
+                    width: 100%
+                    height: $navbar_height - 13
+                    line-height: $navbar_height - 3
+                .down-arrow
+                    width: 100%
+                    height: 13px
+                    line-height: 5px
+
+    nav[active=true]
+
+#label-list
+    position: absolute
+    overflow-y: auto
+    top: 0
+    width: 100%
+    height: 200px
+    background: #fff
+    transition: $transition_default
+    border-bottom: 1px solid #e5e5e5
+    color: #888
+    ul
+        box-sizing: border-box
+        list-style-type: none
+        padding: 0 24px
+        margin: 3px
+        text-align: center
+        line-height: 30px
+        li
+            position: relative
 
 content
     position: relative
@@ -51,7 +70,7 @@ content
     box-sizing: border-box
     width: 100%
     height: 100%
-    background-color: #111
+    background-color: #fff
     panel[id=cart]
         display: none
     panel[id=main]
@@ -65,23 +84,40 @@ content
             max-width: $max_container_width
             height: auto
             box-sizing: border-box
-            background-color: #EDE5E2
-            
+            background-color: #fff
+            #list-inner
+                z-index: 1
+                transition: all 400ms cubic-bezier(0.175, 0.885, 0.335, 1.05) 
+            #list-inner[active=true]
+                transform: translateY(201px)
+            #list-bottom
+                z-index: 2
+                position: relative
+                display: flex
+                flex-direction: row
+                flex-wrap: nowrap
+                flex: 0 0 auto
+                justify-content: center
+                box-sizing: border-box
+                width: 100%
+                height: $bottom_height
+                background-color: #fff
             #recipe-add-icon
+                z-index: 3
                 position: absolute
                 z-index: 0
-                bottom: 15px
                 right: 15px
                 width: 45px
                 height: 45px
+                bottom: 55px
+                left: 50%
+                margin-left: -22px
                 border-radius: 50%
                 overflow: hidden
-                background-color: #777
+                background-color: #fff
                 button
                     font-size: 15px
                     line-height: 48px
-
-
 
 // above mobile
 @media screen and (max-width: $min_container_width * 2)
@@ -89,31 +125,3 @@ content
         panel[id=main]
             list
                 width: 100%
-
-// under mobile
-@media screen and (min-width: $min_container_width * 2)
-    nav
-        .view-open
-            display: none
-
-// for PC
-@media screen and (min-width: $sidebar_width + ($min_container_width * 2))
-    sidebar
-        position: relative
-        width: $sidebar_width
-    nav
-        panel
-            [name=menu]
-                display: none
-
-// for mobile and tablet
-@media screen and (max-width: $sidebar_width + ($min_container_width * 2))
-    // sidebar
-    //     transform: translateX($sidebar_width * -1)
-    // sidebar[active=true]
-    //     transform: translateX(0)
-    container
-        .sidebar-close-area[active=true]
-            display: block
-    container[active=true]
-        transform: translateX($sidebar_width)
