--- a/www/components/button/button.css
+++ b/www/components/button/button.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   width: inherit;
   min-width: 45px;
-  background: #43B6B9;
+  background: transparent;
   text-align: center;
   font: inherit;
   outline-width: 0;
