--- a/app/components/recipenote.sass
+++ b/app/components/recipenote.sass
@@ -4,7 +4,7 @@ container
     position: relative
     z-index: 30
     display: flex
-    flex-direction: column
+    flex-direction: row
     flex: 0 1 auto
     width: 100%
     min-width: $min_container_width
@@ -12,6 +12,19 @@ container
     background-color: #fff
     box-sizing: border-box
     transition: all 400ms cubic-bezier(0.175, 0.885, 0.335, 1.05)
+
+recipe-list
+    position: relative
+    display: flex
+    flex-direction: column
+    flex-wrap: nowrap
+    flex: 1 1 auto
+    min-width: $min_container_width
+    max-width: $max_container_width
+    box-sizing: border-box
+    width: 100%
+    height: 100%
+    background-color: #fff
     nav
         position: relative
         box-sizing: border-box
@@ -40,6 +53,49 @@ container
                     line-height: 5px
 
     nav[active=true]
+
+    list
+        position: relative
+        display: flex
+        flex-direction: column
+        flex: 0 1 auto
+        width: 100%
+        height: 100%
+        box-sizing: border-box
+        background-color: #fff
+        #list-inner
+            z-index: 1
+            transition: all 400ms cubic-bezier(0.175, 0.885, 0.335, 1.05)
+        #list-inner[active=true]
+            transform: translateY(201px)
+        #list-bottom
+            z-index: 2
+            position: relative
+            display: flex
+            flex-direction: row
+            flex-wrap: nowrap
+            flex: 0 0 auto
+            justify-content: center
+            box-sizing: border-box
+            width: 100%
+            height: $bottom_height
+            background-color: #fff
+        #recipe-add-icon
+            z-index: 3
+            position: absolute
+            z-index: 0
+            right: 15px
+            width: 45px
+            height: 45px
+            bottom: 55px
+            left: 50%
+            margin-left: -22px
+            border-radius: 50%
+            overflow: hidden
+            background-color: #fff
+            button
+                font-size: 15px
+                line-height: 48px
 
 #label-list
     position: absolute
@@ -74,50 +130,7 @@ content
     panel[id=cart]
         display: none
     panel[id=main]
-        list
-            position: relative
-            display: flex
-            flex-direction: column
-            flex: 0 0 auto
-            width: 50%
-            min-width: $min_container_width
-            max-width: $max_container_width
-            height: auto
-            box-sizing: border-box
-            background-color: #fff
-            #list-inner
-                z-index: 1
-                transition: all 400ms cubic-bezier(0.175, 0.885, 0.335, 1.05) 
-            #list-inner[active=true]
-                transform: translateY(201px)
-            #list-bottom
-                z-index: 2
-                position: relative
-                display: flex
-                flex-direction: row
-                flex-wrap: nowrap
-                flex: 0 0 auto
-                justify-content: center
-                box-sizing: border-box
-                width: 100%
-                height: $bottom_height
-                background-color: #fff
-            #recipe-add-icon
-                z-index: 3
-                position: absolute
-                z-index: 0
-                right: 15px
-                width: 45px
-                height: 45px
-                bottom: 55px
-                left: 50%
-                margin-left: -22px
-                border-radius: 50%
-                overflow: hidden
-                background-color: #fff
-                button
-                    font-size: 15px
-                    line-height: 48px
+
 
 // above mobile
 @media screen and (max-width: $min_container_width * 2)
