--- a/app/components/button/button.sass
+++ b/app/components/button/button.sass
@@ -8,7 +8,7 @@
     width: inherit
     min-width: $nav_button_width
     background: transparent
-    // background: #43B6B9
+    background: #fff
     text-align: center
     font: inherit
     outline-width: 0
