--- a/app/components/popup-window/popup-labels/popup-labels.sass
+++ b/app/components/popup-window/popup-labels/popup-labels.sass
@@ -8,12 +8,12 @@
             height: $popup_nav_height
 
         section.content
-            button
-                background-color: transparent !important
             ul
                 box-sizing: border-box
                 list-style-type: none
-                padding: 0 24px
+                padding: 6px 24px
+                margin: 0
+                background-color: #fff
                 li
                     position: relative
                     display: flex
