--- a/app/components/popup-window/popup-window.sass
+++ b/app/components/popup-window/popup-window.sass
@@ -58,6 +58,7 @@
         -webkit-overflow-scrolling: touch
     section.bottom
         height: 10px
+        background-color: #fff
 
 // media query for height of popup-window.
 @media screen and (min-height: $screen_h_1) and (max-height: $screen_h_2)
