--- a/www/components/button/button.css
+++ b/www/components/button/button.css
@@ -6,6 +6,7 @@
   width: inherit;
   min-width: 45px;
   background: transparent;
+  background: #fff;
   text-align: center;
   font: inherit;
   outline-width: 0;
