--- a/www/styles.css
+++ b/www/styles.css
@@ -1,3 +1,5 @@
+@import url('statics/fonts/nanumbarungothic.css');
+
 @font-face {
   font-family: 'Noto Sans KR';
   font-style: normal;
@@ -29,46 +31,6 @@
   * Copyright (c) 2010, NAVER Corporation (http://www.nhncorp.com)
   */
 
- @font-face {
-   font-family: 'Nanum Barun Gothic';
-   font-style: normal;
-   font-weight: 200;
-   src: url(fonts/NanumBarunGothicUltraLight.eot);
-   src: local('Nanum Barun Gothic UltraLight'),
-        local('NanumBarunGothicUltraLight'),
-        url(fonts/NanumBarunGothicUltraLight.eot?#iefix) format('embedded-opentype'),
-        url(fonts/NanumBarunGothicUltraLight.woff2) format('woff2'),
-        url(fonts/NanumBarunGothicUltraLight.woff) format('woff'),
-        url(fonts/NanumBarunGothicUltraLight.ttf) format('truetype');
- }
-
- @font-face {
-   font-family: 'Nanum Barun Gothic';
-   font-style: normal;
-   font-weight: 300;
-   src: url(fonts/NanumBarunGothicLight.eot);
-   src: local('Nanum Barun Gothic Light'),
-        local('NanumBarunGothicLight'),
-        url(fonts/NanumBarunGothicLight.eot?#iefix) format('embedded-opentype'),
-        url(fonts/NanumBarunGothicLight.woff2) format('woff2'),
-        url(fonts/NanumBarunGothicLight.woff) format('woff'),
-        url(fonts/NanumBarunGothicLight.ttf) format('truetype');
- }
-
- @font-face {
-   font-family: 'Nanum Barun Gothic';
-   font-style: normal;
-   font-weight: 400;
-   src: url(fonts/NanumBarunGothic.eot);
-   src: local('Nanum Barun Gothic'),
-        local('NanumBarunGothic'),
-        url(fonts/NanumBarunGothic.eot?#iefix) format('embedded-opentype'),
-        url(fonts/NanumBarunGothic.woff2) format('woff2'),
-        url(fonts/NanumBarunGothic.woff) format('woff'),
-        url(fonts/NanumBarunGothic.ttf) format('truetype');
- }
-
-
 
 * {
     -webkit-tap-highlight-color: transparent;
@@ -83,7 +45,7 @@ html {
 body {
     font-family: 'Nanum Barun Gothic', Arial, 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 13px;
-    font-weight: 400;
+    font-weight: 300;
     -webkit-touch-callout: none;
     -webkit-text-size-adjust: none;
     -webkit-user-select: none;
