--- a/app/components/recipenote.sass
+++ b/app/components/recipenote.sass
@@ -14,6 +14,7 @@ container
     transition: all 400ms cubic-bezier(0.175, 0.885, 0.335, 1.05)
 
 recipe-list
+    z-index: 0
     position: relative
     display: flex
     flex-direction: column
@@ -130,7 +131,17 @@ content
     panel[id=cart]
         display: none
     panel[id=main]
-
+    
+// <= tablet
+@media screen and (max-width: $min_container_width * 2)
+    content[active=true]
+        transform: translateX(-100%)
+    content
+        position: fixed
+        top: 0
+        height: 100%
+        transform: translateX(0)
+        transition: $transition_default
 
 // above mobile
 @media screen and (max-width: $min_container_width * 2)
