--- a/www/components/popup-window/popup-labels/popup-labels.css
+++ b/www/components/popup-window/popup-labels/popup-labels.css
@@ -3,12 +3,12 @@
   top: 10%; }
   :host .box nav {
     height: 45px; }
-  :host .box section.content button {
-    background-color: transparent !important; }
   :host .box section.content ul {
     box-sizing: border-box;
     list-style-type: none;
-    padding: 0 24px; }
+    padding: 6px 24px;
+    margin: 0;
+    background-color: #fff; }
     :host .box section.content ul li {
       position: relative;
       display: flex;
