--- a/www/components/popup-window/popup-window.css
+++ b/www/components/popup-window/popup-window.css
@@ -54,7 +54,8 @@
     overflow-y: auto;
     -webkit-overflow-scrolling: touch; }
   :host section.bottom {
-    height: 10px; }
+    height: 10px;
+    background-color: #fff; }
 
 @media screen and (min-height: 480px) and (max-height: 640px) {
   .box {
