--- a/www/components/recipenote.css
+++ b/www/components/recipenote.css
@@ -12,6 +12,7 @@ container {
   transition: all 400ms cubic-bezier(0.175, 0.885, 0.335, 1.05); }
 
 recipe-list {
+  z-index: 0;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -124,6 +125,16 @@ content {
   background-color: #fff; }
   content panel[id=cart] {
     display: none; }
+
+@media screen and (max-width: 640px) {
+  content[active=true] {
+    transform: translateX(-100%); }
+  content {
+    position: fixed;
+    top: 0;
+    height: 100%;
+    transform: translateX(0);
+    transition: all 0.4s; } }
 
 @media screen and (max-width: 640px) {
   content panel[id=main] list {
