--- a/www/components/view/view.html
+++ b/www/components/view/view.html
@@ -1,7 +1,7 @@
 <div id="view-inner">
     <nav>
         <panel id="view-header">
-            <button name="back" title="<<" (click)="inactive();"></button>
+            <button name="back" title="X" (click)="close();"></button>
             <title nav>longer supported and will be removed in next major release</title>
             <btn-group>
                 <button name="color-sticker" title="CS"></button>
