--- a/app/components/recipenote.html
+++ b/app/components/recipenote.html
@@ -4,7 +4,7 @@
             <panel id="main-header">
                 <button nav name="setting" title="S"></button>
                 <div id="main-titlebox" (click)="toggleLabelList()">
-                    <div id="main-title">All labels</div>
+                    <div id="main-title">{{labelNameByID(_labelService.currentLabel)}}</div>
                     <div class="down-arrow">∨</div>
                 </div>
                 <button nav name="sync" title="Y" (click)="openWindow('label');"></button>
@@ -20,7 +20,8 @@
             </div>
             <div id="label-list" [attr.active]="_labelListActivation">
                 <ul>
-                    <li class="label" *ngFor="#labelData of (_labelService.labels.toArray() | exceptRemoved)">{{labelData.name}}</li>
+                    <li class="label" (click)="selectLabel('all')" [attr.selected]="_labelService.currentLabel == 'all' ? true : false">all labels</li>
+                    <li class="label" (click)="selectLabel(labelData.id)"  [attr.selected]="_labelService.currentLabel == labelData.id ? true : false" *ngFor="#labelData of (_labelService.labels .toArray() | exceptRemoved)">{{labelData.name}}</li>
                 </ul>
             </div>
             <div id="recipe-add-icon">
