--- a/app/components/recipenote.sass
+++ b/app/components/recipenote.sass
@@ -97,26 +97,27 @@ recipe-list
             button
                 font-size: 15px
                 line-height: 48px
-
-#label-list
-    position: absolute
-    overflow-y: auto
-    top: 0
-    width: 100%
-    height: 200px
-    background: #fff
-    transition: $transition_default
-    border-bottom: 1px solid #e5e5e5
-    color: #888
-    ul
-        box-sizing: border-box
-        list-style-type: none
-        padding: 0 24px
-        margin: 3px
-        text-align: center
-        line-height: 30px
-        li
-            position: relative
+        #label-list
+            position: absolute
+            overflow-y: auto
+            top: 0
+            width: 100%
+            height: 200px
+            background: #fff
+            transition: $transition_default
+            border-bottom: 1px solid #e5e5e5
+            color: #888
+            ul
+                box-sizing: border-box
+                list-style-type: none
+                padding: 0 24px
+                margin: 3px
+                text-align: center
+                line-height: 30px
+                li
+                    position: relative
+                li[selected=true]
+                    color: #000
 
 content
     position: relative
