--- a/www/components/recipenote.css
+++ b/www/components/recipenote.css
@@ -42,7 +42,7 @@ recipe-list {
         width: 100%;
         text-align: center;
         cursor: pointer; }
-        recipe-list nav #main-header #main-titlebox #main-title {
+        recipe-list nav #main-header #main-titlebox #_main-title {
           width: 100%;
           height: 32px;
           line-height: 42px; }
@@ -61,6 +61,7 @@ recipe-list {
     background-color: #fff; }
     recipe-list list #list-inner {
       z-index: 1;
+      background-color: #fff;
       transition: all 400ms cubic-bezier(0.175, 0.885, 0.335, 1.05); }
     recipe-list list #list-inner[active=true] {
       transform: translateY(201px); }
@@ -100,7 +101,6 @@ recipe-list {
       height: 200px;
       background: #fff;
       transition: all 0.4s;
-      border-bottom: 1px solid #e5e5e5;
       color: #888; }
       recipe-list list #label-list ul {
         box-sizing: border-box;
