--- a/app/components/recipenote.html
+++ b/app/components/recipenote.html
@@ -20,8 +20,8 @@
             </div>
             <div id="label-list" [attr.active]="_labelListActivation">
                 <ul>
-                    <li class="label" (click)="selectLabel('all')" [attr.selected]="_labelService.currentLabelID == 'all' ? true : false">all labels</li>
-                    <li class="label" (click)="selectLabel(labelData.id)"  [attr.selected]="_labelService.currentLabelID == labelData.id ? true : false" *ngFor="#labelData of (_labelService.labels.toArray() | exceptRemoved)">{{labelData.name}}</li>
+                    <li class="label" [attr.selected]="_labelService.currentLabelID == 'all' ? true : false"><button name="all" title="all labels" (click)="selectLabel('all')"></button></li>
+                    <li class="label" [attr.selected]="_labelService.currentLabelID == labelData.id ? true : false" *ngFor="#labelData of (_labelService.labels.toArray() | exceptRemoved)"><button name="{{labelData.id}}" title="{{labelData.name}}" (click)="selectLabel(labelData.id)"></button></li>
                 </ul>
             </div>
             <div id="recipe-add-icon">
