--- a/app/components/recipenote.sass
+++ b/app/components/recipenote.sass
@@ -106,7 +106,6 @@ recipe-list
             height: 200px
             background: #fff
             transition: $transition_default
-            color: #888
             ul
                 box-sizing: border-box
                 list-style-type: none
@@ -116,8 +115,13 @@ recipe-list
                 line-height: 30px
                 li
                     position: relative
+                    button
+                        width: 100%
+                        line-height: 40px
+                        color: #888
                 li[selected=true]
-                    color: #000
+                    button
+                        color: #000
 
 content
     position: relative
@@ -132,7 +136,7 @@ content
     panel[id=cart]
         display: none
     panel[id=main]
-    
+
 // <= tablet
 @media screen and (max-width: $min_container_width * 2)
     content[active=true]
