--- a/www/components/nav/nav.css
+++ b/www/components/nav/nav.css
@@ -2,7 +2,7 @@ title {
   display: inline-block;
   width: 100%;
   height: 45px;
-  line-height: 23px;
+  line-height: 26px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -16,7 +16,8 @@ title[expend=true] {
 
 button {
   width: 45px;
-  line-height: 45px; }
+  line-height: 45px;
+  height: 45px; }
 
 button[name=more] {
   position: absolute;
@@ -27,4 +28,5 @@ btn-group {
   -webkit-display: flex !important;
   -moz-display: flex !important;
   -ms-display: flex !important;
-  -o-display: flex !important; }
+  -o-display: flex !important;
+  height: 45px; }
