--- a/www/components/panel/panel.css
+++ b/www/components/panel/panel.css
@@ -5,7 +5,7 @@ panel {
   -ms-display: flex;
   -o-display: flex;
   width: 100%;
-  height: auto; }
+  height: 100%; }
 
 multi-panel {
   display: block;
