--- a/www/components/popup-window/popup-labels/popup-labels.html
+++ b/www/components/popup-window/popup-labels/popup-labels.html
@@ -3,7 +3,7 @@
     <div class="inner-wrapper">
         <nav>
             <panel id="popup-labels-view">
-                <button name="back" title="←" (click)="close();"></button>
+                <button name="back" title="X" (click)="close();"></button>
                 <title nav>Lables</title>
                 <button name="add" title="A" (click)="add();"></button>
             </panel>
