--- a/www/components/recipenote.css
+++ b/www/components/recipenote.css
@@ -100,8 +100,7 @@ recipe-list {
       width: 100%;
       height: 200px;
       background: #fff;
-      transition: all 0.4s;
-      color: #888; }
+      transition: all 0.4s; }
       recipe-list list #label-list ul {
         box-sizing: border-box;
         list-style-type: none;
@@ -111,7 +110,11 @@ recipe-list {
         line-height: 30px; }
         recipe-list list #label-list ul li {
           position: relative; }
-        recipe-list list #label-list ul li[selected=true] {
+          recipe-list list #label-list ul li button {
+            width: 100%;
+            line-height: 40px;
+            color: #888; }
+        recipe-list list #label-list ul li[selected=true] button {
           color: #000; }
 
 content {
