--- a/www/styles.css
+++ b/www/styles.css
@@ -34,7 +34,7 @@
 
 * {
     -webkit-tap-highlight-color: transparent;
-    
+
 }
 *:focus {
     outline: none;
@@ -42,10 +42,12 @@
 html {
     height: 100%;
 }
-body {
+body, input {
     font-family: 'Nanum Barun Gothic', Arial, 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 13px;
     font-weight: 300;
+}
+body {
     -webkit-touch-callout: none;
     -webkit-text-size-adjust: none;
     -webkit-user-select: none;
