--- a/app/components/common.sass
+++ b/app/components/common.sass
@@ -34,6 +34,12 @@ $width_level3: $max_container_width + 100
 $width_level4: $max_container_width 
 $width_level5: $max_container_width + 250
 
+// recipe-item
+$recipe_item_padding_top: 10px
+$recipe_item_padding_bottom: 10px
+$recipe_item_padding_left: 15px
+$recipe_item_padding_right: 15px
+
 // animation
 $transition_default: all 0.4s
 
