--- a/app/components/nav/nav.sass
+++ b/app/components/nav/nav.sass
@@ -1,5 +1,8 @@
 @import '../common'
 
+nav
+    background-color: #fff
+
 title
     display: inline-block
     width: 100%
@@ -8,7 +11,6 @@ title
     overflow: hidden
     text-overflow: ellipsis
     white-space: nowrap
-    background-color: #fff
     padding: 10px
     box-sizing: border-box
 
