--- a/app/components/view/header/header.sass
+++ b/app/components/view/header/header.sass
@@ -2,7 +2,14 @@
 
 :host
     display: block
-    padding: 10px
+    box-sizing: border-box
+    padding-top: $recipe_item_padding_top
+    padding-bottom: $recipe_item_padding_bottom
+    padding-left: $recipe_item_padding_left
+    padding-right: $recipe_item_padding_right
+    margin: 0
     width: 100%
     min-height: 25px
     font-size: 15px
+    font-weight: 300
+    background-color: #fff
