--- a/www/components/nav/nav.css
+++ b/www/components/nav/nav.css
@@ -1,3 +1,6 @@
+nav {
+  background-color: #fff; }
+
 title {
   display: inline-block;
   width: 100%;
@@ -6,7 +9,6 @@ title {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  background-color: #fff;
   padding: 10px;
   box-sizing: border-box; }
 
