--- a/app/components/view/header/header.sass
+++ b/app/components/view/header/header.sass
@@ -13,3 +13,8 @@
     font-size: 15px
     font-weight: 300
     background-color: #fff
+
+    input[type=text]
+        border: none
+        font-size: 15px
+        background-color: transparent
