--- a/www/components/view/header/header.css
+++ b/www/components/view/header/header.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 15px;
+  padding-left: 20px;
   padding-right: 15px;
   margin: 0;
   width: 100%;
@@ -11,3 +11,7 @@
   font-size: 15px;
   font-weight: 300;
   background-color: #fff; }
+  :host input[type=text] {
+    border: none;
+    font-size: 15px;
+    background-color: transparent; }
