--- a/www/components/view/header/header.html
+++ b/www/components/view/header/header.html
@@ -1,1 +1,2 @@
-<input type="text" [(ngModel)]="heading" />
+<button name="move" title="::"
+<input type="text" [(ngModel)]="heading" (focus)="enterEditMode()" (focusout)="exitEditMode()"/>
